# riddle-llm-benchmark

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  compose.yaml  pyproject.toml  run_major_llms.sh
.github/workflows/: test.yml
src/riddle_benchmark/: __init__.py  cli.py  core.py  runner.py  utils.py
src/riddle_benchmark/assets/: metadata.jsonl
src/riddle_benchmark/assets/prompts/: 01.txt  02.txt
src/riddle_benchmark/dataset/: loader.py  schema.py
src/riddle_benchmark/evaluation/: evaluator.py
src/riddle_benchmark/models/: base.py  schemas.py
tests/: test_core.py  test_dataset.py  test_evaluator.py  test_model.py  test_runner.py  test_utils.py
