[project]
name = "riddle-llm-benchmark"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "cfiken", email = "kentaro.nakanishi@abejainc.com" }
]
requires-python = ">=3.13"
dependencies = [
    "litellm>=1.80.8",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "tqdm>=4.67.1",
]

[project.scripts]
riddle-benchmark = "riddle_benchmark.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/riddle_benchmark"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
